just testing stuff

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,3 +12,5 @@ LAYERDEPENDS_meta-de10-nano = "meta-altera"
 
 # this is just for release builds
 META_DE10_NANO_BASE := '${LAYERDIR}'
+
+WKS_FILES = "sdimage-cyclone5-arria5.wks"
